<resources>
    <string name="app_name">Analýza Prodejů</string>


    <string name="db_version">Verze aplikace: 6</string>
    <string name="author">(c) 2019, Michal Trojek</string>


    <string name="navigation_drawer_open">Close navigation close</string>
    <string name="navigation_drawer_close">Open navigation drawer</string>
    <string name="content_description_for_logo">Logo</string>
    <string name="home_text_drawer_menu">Domů</string>
    <string name="import_data_text_drawer_menu">Nahrát data z analýzy</string>
    <string name="ftp_data_text_drawer_menu">Nahrát data z FTP</string>
    <string name="printer_data_text_drawer_menu">Tisk</string>
    <string name="export_data_text_drawer_menu">Odeslat data</string>
    <string name="ranking_text_drawer_menu">Žebříček prodejů</string>
    <string name="detail_text_drawer_menu">Detail</string>

    <string name="printer_text_drawer_menu"> Vratky a Objednávky</string>
    <string name="settings_text_drawer_menu">Nastavení IP</string>
    <string name="about_text_drawer_menu">O aplikaci</string>
    <string name="search_text_drawer_menu">Hledat podle názvu</string>
    <string name="info_text_drawer_menu">Informace</string>
    <string name="content_descriton_for_background_scanner">library_shelf</string>
    <string name="content_description_for_infobackground">infobackgroun</string>


    <string name="ip_adress_textView">Vložte IP adresu.</string>
    <string name="save_ip_button">ULOŽIT NASTAVENÍ</string>

    <string name="start_downloading">Stahování databáze</string>
    <string name="start_downloading_text">Probíhá stahování databáze...</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_found_textView">Produkt nebyl nalezen v analýze</string>
    <string name="ftp_save_button">Stahnout data z vybrané prodejny.</string>
    <string name="import_from_pc">Nahrát data přes SP</string>
    <string name="heslo_k_ftp">HESLO K FTP</string>
    <string name="vyberte_prodejnu">Vyberte prodejnu</string>
    <string name="hledat_podle_n_zvu">HLEDAT PODLE NÁZVU</string>
    <string name="hledat_podle_jmena">Hledat podle jmena</string>
    <string name="hledat_podle_eanu">HLEDAT PODLE EANU</string>
    <string name="vlo_te_ean">Vložte EAN</string>


    <string-array name="stores">
        <item>Praha - Václavské Náměstí</item>
        <item>Praha - Arkády Pankrác</item>
        <item>Praha - Anděl City</item>
        <item>Praha - OD Kotva</item>
        <item>Praha - NC Metrolope Zličín</item>
        <item>Praha - OC Letňany</item>
        <item>Praha - Dejvice</item>
        <item>Praha - Vivo! Hostivař</item>
        <item>Praha - NC Eden</item>
        <item>Brno - Joštova</item>
        <item>Brno - Galerie Vaňkovka</item>
        <item>e-knihy</item>
        <item>Ostrava - Nová Karolína</item>
        <item>Ostrava - OC Galerie</item>
        <item>Cheb - Náměstí krále jiřího</item>
        <item>České Budějovice - IGY Centrum</item>
        <item>České Budějovice - OD Prior</item>
        <item>Hradec Králové - OC Atrium</item>
        <item>Jihlava - Tesco</item>
        <item>Karlovy Vary - OC Fontána</item>
        <item>Karviná - Tesco</item>
        <item>Kolín - OC Futurum</item>
        <item>Kbely</item>
        <item>Liberec - OC Nisa</item>
        <item>Liberec - NG Plaza</item>
        <item>Most - Central</item>
        <item>Olomouc - Galerie Šantovka</item>
        <item>Olomouc - City</item>
        <item>Opava - OC Silesia</item>
        <item>Pardubice- Atrium Palác</item>
        <item>Plzeň - Náměstí Republiky</item>
        <item>Plzeň - Sedláčkova</item>
        <item>Plzeň - OC Plzeň</item>
        <item>Předplatné</item>
        <item>Teplice - Galerie Teplice</item>
        <item>Tachov - Náměstí Republiky</item>
        <item>Ústí nad Labem - Forum</item>
    </string-array>

    <string-array name="search_options">
        <item>podle eanu</item>
        <item>čarovým kódem</item>
        <item>podle názvu</item>

    </string-array>
</resources>
